CREATE DATABASE ShoppingCart;

USE ShoppingCart;

CREATE TABLE Person(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
name  VARCHAR(20) NOT NULL,
phone VARCHAR(10) NOT NULL UNIQUE,
email VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE users(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
id_person INT UNIQUE NOT NULL,
name  VARCHAR(20) NOT NULL,
email VARCHAR(100) NOT NULL UNIQUE,
password_hash VARCHAR(255) NOT NULL ,
FOREIGN KEY (id_person) REFERENCES Person(id) ON DELETE CASCADE
);

CREATE TABLE role(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
name VARCHAR(20) NOT NULL UNIQUE,
description VARCHAR(100) NOT NULL
);

CREATE TABLE user_role(
id_user INT NOT NULL,
id_role INT NOT NULL,
PRIMARY KEY (id_user, id_role),
FOREIGN KEY (id_user) REFERENCES users(id) ON DELETE CASCADE,
FOREIGN KEY (id_role) REFERENCES role(id) ON DELETE CASCADE
);

CREATE TABLE module(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL, 
name VARCHAR(20) NOT NULL UNIQUE,
description VARCHAR(100) NOT NULL
);

CREATE TABLE role_module(
id_role INT NOT NULL,
id_module INT NOT NULL,
PRIMARY KEY (id_role, id_module),
FOREIGN KEY (id_role) REFERENCES role(id) ON DELETE CASCADE,
FOREIGN KEY (id_module) REFERENCES module(id) ON DELETE CASCADE
);

CREATE TABLE view(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
name VARCHAR(20) NOT NULL UNIQUE,
description VARCHAR(100) NOT NULL
);

CREATE TABLE module_view(
id_module INT NOT NULL,
id_view INT NOT NULL,
PRIMARY KEY (id_module, id_view),
FOREIGN KEY (id_module) REFERENCES module(id) ON DELETE CASCADE,
FOREIGN KEY (id_view) REFERENCES view(id) ON DELETE CASCADE
);

CREATE TABLE action(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
name VARCHAR(20) NOT NULL UNIQUE,
description VARCHAR(100) NOT NULL
);

CREATE TABLE view_action(
id_view INT NOT NULL,
id_action INT NOT NULL,
PRIMARY KEY (id_view, id_action),
FOREIGN KEY (id_view) REFERENCES view(id) ON DELETE CASCADE,
FOREIGN KEY (id_action) REFERENCES action(id) ON DELETE CASCADE
);

CREATE TABLE cart(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
id_user INT NOT NULL,
created_at DATETIME2 DEFAULT SYSDATETIME(),
expire_at DATETIME2 DEFAULT DATEADD(DAY, 7, SYSDATETIME()),
FOREIGN KEY (id_user) REFERENCES users(id) ON DELETE CASCADE
);

CREATE TABLE product(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
name VARCHAR(20) NOT NULL UNIQUE,
description VARCHAR(100) NOT NULL,
price DECIMAL(10,2) NOT NULL
);

CREATE TABLE inventory(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
id_product INT NOT NULL UNIQUE,
quantity INT NOT NULL,
FOREIGN KEY (id_product) REFERENCES product(id) ON DELETE CASCADE
);

CREATE TABLE category(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
name VARCHAR(20) NOT NULL UNIQUE,
description VARCHAR(100) NOT NULL
);

CREATE TABLE product_category(
id_product INT NOT NULL,
id_category INT NOT NULL,
PRIMARY KEY (id_product, id_category),
FOREIGN KEY (id_product) REFERENCES product(id) ON DELETE CASCADE,
FOREIGN KEY (id_category) REFERENCES category(id) ON DELETE CASCADE
);

CREATE TABLE cart_detail(
id_cart INT NOT NULL,
id_product INT NOT NULL,
quantity INT NOT NULL,  
PRIMARY KEY (id_cart, id_product),
FOREIGN KEY (id_cart) REFERENCES cart(id) ON DELETE CASCADE,
FOREIGN KEY (id_product) REFERENCES product(id) ON DELETE CASCADE
);

CREATE TABLE orders(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
id_cart INT NOT NULL,
id_user INT NOT NULL,
state VARCHAR(20) NOT NULL,
total DECIMAL(10,2) NOT NULL,
created_at DATETIME2 DEFAULT SYSDATETIME(),
payment_method VARCHAR(20) NOT NULL,
pickup_code VARCHAR(10) NOT NULL,
FOREIGN KEY (id_cart) REFERENCES cart(id) ON DELETE NO ACTION,
FOREIGN KEY (id_user) REFERENCES users(id) ON DELETE CASCADE
);

CREATE TABLE order_detail(
id INT PRIMARY KEY IDENTITY (1,1) NOT NULL,
id_order INT NOT NULL,
id_product INT NOT NULL,
quantity INT NOT NULL,
price DECIMAL(10,2) NOT NULL,
FOREIGN KEY (id_order) REFERENCES orders(id) ON DELETE CASCADE,
FOREIGN KEY (id_product) REFERENCES product(id) ON DELETE CASCADE
);

